bindings/swift/lib/iota_sdk_ffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
void*_Nonnull uniffi_iota_sdk_ffi_fn_constructor_graphqlclient_new_testnet(RustCallStatus *_Nonnull out_status
    
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_active_validators(void*_Nonnull ptr, RustBuffer pagination_filter, RustBuffer epoch
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_balance(void*_Nonnull ptr, void*_Nonnull address, RustBuffer coin_type
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_chain_id(void*_Nonnull ptr
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_checkpoint(void*_Nonnull ptr, RustBuffer digest, RustBuffer seq_num
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_checkpoints(void*_Nonnull ptr, RustBuffer pagination_filter
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_coin_metadata(void*_Nonnull ptr, RustBuffer coin_type
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_coins(void*_Nonnull ptr, void*_Nonnull owner, RustBuffer pagination_filter, RustBuffer coin_type
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_dry_run_tx(void*_Nonnull ptr, void*_Nonnull tx, RustBuffer skip_checks
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_dry_run_tx_kind(void*_Nonnull ptr, void*_Nonnull tx_kind, RustBuffer tx_meta, RustBuffer skip_checks
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_dynamic_field(void*_Nonnull ptr, void*_Nonnull address, void*_Nonnull type_tag, RustBuffer name
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_dynamic_fields(void*_Nonnull ptr, void*_Nonnull address, RustBuffer pagination_filter
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_dynamic_object_field(void*_Nonnull ptr, void*_Nonnull address, void*_Nonnull type_tag, RustBuffer name
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_epoch(void*_Nonnull ptr, RustBuffer epoch
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_epoch_total_checkpoints(void*_Nonnull ptr, RustBuffer epoch
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_epoch_total_transaction_blocks(void*_Nonnull ptr, RustBuffer epoch
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_events(void*_Nonnull ptr, RustBuffer pagination_filter, RustBuffer filter
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_execute_tx(void*_Nonnull ptr, RustBuffer signatures, void*_Nonnull tx
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_latest_checkpoint_sequence_number(void*_Nonnull ptr
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_max_page_size(void*_Nonnull ptr
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_move_object_contents(void*_Nonnull ptr, void*_Nonnull object_id, RustBuffer version
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_move_object_contents_bcs(void*_Nonnull ptr, void*_Nonnull object_id, RustBuffer version
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_normalized_move_function(void*_Nonnull ptr, RustBuffer package, RustBuffer module, RustBuffer function, RustBuffer version
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_normalized_move_module(void*_Nonnull ptr, RustBuffer package, RustBuffer module, RustBuffer pagination_filter_enums, RustBuffer pagination_filter_friends, RustBuffer pagination_filter_functions, RustBuffer pagination_filter_structs, RustBuffer version
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_object(void*_Nonnull ptr, void*_Nonnull object_id, RustBuffer version
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_object_bcs(void*_Nonnull ptr, void*_Nonnull object_id
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_objects(void*_Nonnull ptr, RustBuffer pagination_filter, RustBuffer filter
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_package(void*_Nonnull ptr, void*_Nonnull address, RustBuffer version
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_package_latest(void*_Nonnull ptr, void*_Nonnull address
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_package_versions(void*_Nonnull ptr, void*_Nonnull address, RustBuffer pagination_filter, RustBuffer after_version, RustBuffer before_version
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_packages(void*_Nonnull ptr, RustBuffer pagination_filter, RustBuffer after_checkpoint, RustBuffer before_checkpoint
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_protocol_config(void*_Nonnull ptr, RustBuffer version
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_reference_gas_price(void*_Nonnull ptr, RustBuffer epoch
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_service_config(void*_Nonnull ptr
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_set_rpc_server(void*_Nonnull ptr, RustBuffer server
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_total_supply(void*_Nonnull ptr, RustBuffer coin_type
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_total_transaction_blocks(void*_Nonnull ptr
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_total_transaction_blocks_by_digest(void*_Nonnull ptr, void*_Nonnull digest
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_total_transaction_blocks_by_seq_num(void*_Nonnull ptr, uint64_t seq_num
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_transaction(void*_Nonnull ptr, void*_Nonnull digest
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_transaction_data_effects(void*_Nonnull ptr, void*_Nonnull digest
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_transaction_effects(void*_Nonnull ptr, void*_Nonnull digest
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_transactions(void*_Nonnull ptr, RustBuffer pagination_filter, RustBuffer filter
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_transactions_data_effects(void*_Nonnull ptr, RustBuffer pagination_filter, RustBuffer filter
);
uint64_t uniffi_iota_sdk_ffi_fn_method_graphqlclient_transactions_effects(void*_Nonnull ptr, RustBuffer pagination_filter, RustBuffer filter
);